# Hexapod

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build.yaml
arduino/: README.md  copy_to_arduino_library.sh
arduino/phantomx_ps4_control/: phantomx_ps4_control.ino  ps4_receiver.h
arduino_phantomx/phantomx_ps4_control/: phantomx_ps4_control.ino
core/: CMakeLists.txt  copy_to_arduino_library.sh  package.xml
core/doxygen/: Doxyfile
core/include/: build_hexapod.h  hexapod.h  joint.h  kinematics_support.h  leg.h  receiver.h  transformations.h
core/src/: build_hexapod.cpp  example.cpp  hexapod.cpp  joint.cpp  kinematics_support.cpp  leg.cpp  receiver.cpp  transformations.cpp
docker/: Dockerfile
include/: hexapod.h  leg.h
launch/: control.launch  demo.launch  display.launch
phantomx/: phantomx.ino
rviz/: hexapod.rviz
src/: hexapod.cpp  kinematics_support.cpp  leg.cpp  visualisation.cpp
test/: test_tf.cpp
urdf/: hexapod.urdf.xacro
vis/: CMakeLists.txt  package.xml
vis/include/: build_from_urdf.h  receiver.h  ros_receiver.h  visualisation.h
vis/launch/: control.launch  control_px.launch  demo.launch  display.launch  display_px.launch
vis/rviz/: hexapod.rviz  phantomx.rviz
vis/src/: build_from_urdf.cpp  controller_node.cpp  demo_node.cpp  receiver.cpp  receiver_node.cpp  ros_receiver.cpp  visualisation.cpp
vis/test/: test_ik.cpp  test_tf.cpp
vis/urdf/: hexapod.urdf.xacro  hexapod2.urdf.xacro  octapod.urdf.xacro  phantomx.urdf.xacro  sillypod.urdf.xacro
